--- a/GameData/WildBlueIndustries/Buffalo/Category/Category.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Category/Category.cfg
@@ -3,5 +3,5 @@ MODCAT
     folderName = Buffalo
     normalPath = WildBlueIndustries/Buffalo/Category/BuffaloIcon
     selectedPath = WildBlueIndustries/Buffalo/Category/BuffaloIcon
-    title = Buffalo MMSEV
+    title = Buffalo MSEV
 }
