Updates to latest release

--- a/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Command/BuffaloCab.cfg
@@ -21,7 +21,7 @@ category = Pods
 subcategory = 0
 title = Buffalo Command Cab
 manufacturer = Wild Blue Industries
-description = The cornerstone of the Modular Space Exploration Vehicle (MSEV), the Buffalo Command Cab provides command and control functionality for the MSEV system. While not as sturdy as a Mk1 Lander Can, the Buffalo Command Cab seats two kerbals, albeit in a confined space.
+description = The cornerstone of the Modular Space Exploration Vehicle (MSEV), the Buffalo Command Cab provides command and control functionality for the MSEV system. The Buffalo Command Cab seats two kerbals, albeit in a confined space.
 
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 1,0,1,1,0
@@ -32,7 +32,7 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 7
+crashTolerance = 20
 maxTemp = 1500
 breakingForce = 50
 breakingTorque = 50
@@ -122,6 +122,7 @@ CrewCapacity = 2
 		endEventGUIName = Cabin Lights Off
 		actionGUIName = Toggle Cabin Lights
 		actionGroup = Light
+		animationLayer = 8
 	}
 
 	MODULE
