--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/CrewCab.cfg
@@ -38,7 +38,7 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 40
+crashTolerance = 20
 maxTemp = 1500
 breakingForce = 50
 breakingTorque = 50
@@ -92,6 +92,7 @@ CrewCapacity = 2
 		pivotName = suncatcher
 		isBreakable = false
 		resourceName = ElectricCharge
+		impactResistance = 20
 		chargeRate = 2.8
 	}
 
