--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed1uStd.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed1uStd.cfg
@@ -52,6 +52,8 @@ MODULE
 	{
 		attachNode = top1
 		allowedPartName= WBI_Ponderosa
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName= WBI_Buckboard
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
@@ -64,6 +66,8 @@ MODULE
 		attachNode = top2
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
