--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed1uWide.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed1uWide.cfg
@@ -54,6 +54,8 @@ MODULE
 		attachNode = top1
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -65,6 +67,8 @@ MODULE
 		attachNode = top2
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -76,6 +80,8 @@ MODULE
 		attachNode = top3
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
