--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed2uWide.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed2uWide.cfg
@@ -58,6 +58,8 @@ MODULE
 		attachNode = top1
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -69,6 +71,8 @@ MODULE
 		attachNode = top2
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -80,6 +84,8 @@ MODULE
 		attachNode = top3
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -91,6 +97,8 @@ MODULE
 		attachNode = top4
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -102,6 +110,8 @@ MODULE
 		attachNode = top5
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -113,6 +123,8 @@ MODULE
 		attachNode = top6
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
