--- a/GameData/WildBlueIndustries/Buffalo/Category/Category.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Category/Category.cfg
@@ -1,7 +1,7 @@
 MODCAT
 {
-    folderName = Buffalo
-    normalPath = WildBlueIndustries/Buffalo/Category/BuffaloIcon
-    selectedPath = WildBlueIndustries/Buffalo/Category/BuffaloIcon
-    title = Buffalo MSEV
+	title = Buffalo MSEV
+	folderName = Buffalo;WildBlueTools
+	normalPath = WildBlueIndustries/Buffalo/Category/BuffaloIcon
+	selectedPath = WildBlueIndustries/Buffalo/Category/BuffaloIcon
 }
