--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisEndu.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/ChassisEndu.cfg
@@ -45,4 +45,50 @@ breakingTorque = 50
 bulkheadProfiles = size1, srf
 CrewCapacity = 0
 
+	MODULE
+	{
+		name = ModuleKISInventory
+		maxVolume = 100
+		externalAccess = true
+		internalAccess = false
+		slotsX = 2
+		slotsY = 2
+		slotSize = 50
+		itemIconResolution = 128
+		selfIconResolution = 128
+		openSndPath = KIS/Sounds/containerOpen
+		closeSndPath = KIS/Sounds/containerClose
+		defaultMoveSndPath = KIS/Sounds/itemMove
+	}
+
+	MODULE
+	{
+		name = WBIResourceSwitcher
+
+		//Determines if the module allows in-field reconfiguring
+		fieldReconfigurable = True
+
+		//Require a confirmation click before changing resources
+		confirmResourceSwitch = True
+
+		//Determines whether or not to show the context menu GUI
+		showGUI = True
+
+		//name of the template nodes to use
+		templateNodes = STORAGE_TEMPLATE;BATTERY
+
+		//Short name of the default module template.
+		//This is used when selecting the part in the editor.
+		//User will then right-click on the module to change its type.
+		defaultTemplate = Prime Flux Battery
+
+		//Some containers don't hold as much resources as the template specifies, while others hold more.
+		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
+		//factor into the resource amounts.
+		capacityFactor = 0.0144
+
+		//If the part has a KIS container, this is the base and max amount
+		baseStorage = .001
+		maxStorage = 100
+	}
 }
