--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed2uStd.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Flatbed2uStd.cfg
@@ -56,6 +56,8 @@ MODULE
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
 		allowedPartName = KIS_Container1
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
 		allowedPartName = WBI_Poncho
@@ -66,6 +68,8 @@ MODULE
 		attachNode = top2
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -77,6 +81,8 @@ MODULE
 		attachNode = top3
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
@@ -88,6 +94,8 @@ MODULE
 		attachNode = top4
 		allowedPartName= WBI_Ponderosa
 		allowedPartName= WBI_Buckboard
+		allowedPartName= WBI_Buckboard2
+		allowedPartName= WBI_Buckboard3
 		allowedPartName = KIS_Container1
 		allowedPartName = WBI_MicroFusionReactor
 		allowedPartName = rtg
