--- a/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Wagon2u.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Utility/Wagon2u.cfg
@@ -34,7 +34,7 @@ dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
 angularDrag = 2
-crashTolerance = 40
+crashTolerance = 20
 maxTemp = 1500
 breakingForce = 50
 breakingTorque = 50
@@ -47,8 +47,8 @@ CrewCapacity = 0
 		maxVolume = 100
 		externalAccess = true
 		internalAccess = false
-		slotsX = 2
-		slotsY = 2
+		slotsX = 8
+		slotsY = 8
 		slotSize = 50
 		itemIconResolution = 128
 		selfIconResolution = 128
@@ -80,7 +80,6 @@ CrewCapacity = 0
 		confirmResourceSwitch = True
 
 		//Determines whether or not to show the context menu GUI
-		//So objects derived from MKSStorageContainer can show their own GUI
 		showGUI = True
 
 		//name of the template nodes to use
@@ -120,6 +119,7 @@ CrewCapacity = 0
 		pivotName = suncatcher
 		isBreakable = false
 		resourceName = ElectricCharge
+		impactResistance = 20
 		chargeRate = 2.8
 	}
 
