--- a/Buffalo/Buffalo.csproj
+++ b/Buffalo/Buffalo.csproj
@@ -46,12 +46,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArmScanner\AsteroidScannerInfo.cs" />
+    <Compile Include="Arms\AsteroidScannerInfo.cs" />
     <Compile Include="Settings\BuffaloSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings\BuffaloGameSettings.cs" />
-    <Compile Include="ArmScanner\WBIModuleAsteroidScanner.cs" />
-    <Compile Include="WBIModuleGrappleNode.cs" />
+    <Compile Include="Arms\WBIModuleAsteroidScanner.cs" />
+    <Compile Include="Arms\WBIModuleGrappleNode.cs" />
+    <Compile Include="WBIModuleRotator.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WildBlueTools\WildBlueTools.csproj">
