--- a/GameData/WildBlueIndustries/Buffalo/Parts/JetWing/MicroJetEngine.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/JetWing/MicroJetEngine.cfg
@@ -1,48 +1,44 @@
 PART
 {
-	name = WBI_JetWing
+	name = WBI_MicroJetEngine
 	module = Part
 	author = Angel-125
 
 	MODEL
 	{
-		model = WildBlueIndustries/Buffalo/Parts/JetWing/JetWing
+		model = WildBlueIndustries/Buffalo/Parts/JetWing/MicroJetEngine
 	}
 	rescaleFactor = 1
-//	node_stack_feet = 0.0, -0.5, 0, 0.0, -1, 0, 0
-	node_stack_left = -0.6, 0.0, 0.0, 0.0, 0, 1.0, 0
-	node_stack_right = 0.6, 0.0, 0.0, 0.0, 0, 1.0, 0
-	node_stack_back = 0.0, 0, -0.02766883, 0.0, 0, -1.0, 0
-	node_attach = 0.0, 0, -0.02766883, 0.0, 0, 1.0, 0
+
+	node_attach = 0, 0, 0, 0, 0, 1, 0
+	node_stack_mount = 0, 0, 0, 0, 0, 1, 0
 
 	TechRequired = precisionEngineering
-	entryCost = 8000
-	cost = 12500
-	category = Utility
+	entryCost = 600
+	cost = 50
+	category = Engine
 	subcategory = 0
-	title = JetWing
+	title = WJ400 Jaguar
 	manufacturer = Wild Blue Industries
-	description = Created by pioneer Yves Kerman, the JetWing can trace its lineage back to the KQ-1 winged jetpack. The modern JetWing gives the power of flight to an individual kerbal crazy enough to wear a tiny set of wings and jet engines. Its vertical take off and landing (VTOL) hover capability and stability assist make it easy to fly. The engines can run on any world with an atmosphere thanks to its monopropellant fuel, but it comes at the expense of endurance. Or, switch over to liquid fuel and fly on worlds with oxygenated atmosphers with increased endurance. With a proper inventory system, the JetWing can be refueled simply by bolting it to the side of a craft and performing a standard fuel transfer. And don't forget the JetWing accessories...
+	description = Sometimes you need a bit more thrust to carry those heavy payloads. The WJ400 Jaguar is a micro-jet engine that fits the bill. While it generates a tiny amount of thrust compared to other jet engines, the Jaguar's specialized electronics give it a hover mode that's tied to other hover-capable engines on the craft. It also can switch between liquid fuel for oxygenated atmospheres and monopropellant on worlds with atmospheres for reduced range.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
-	attachRules = 1,1,1,1,1
+	attachRules = 1,1,1,1,0
 
 	// --- standard part parameters ---
-	mass = 0.025
+	mass = 0.03
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 20
+	crashTolerance = 40
+	maxTemp = 1500
 	breakingForce = 50
 	breakingTorque = 50
-	bulkheadProfiles = size0, srf
-	maxTemp = 1400
-	skinMaxTemp = 1400
-	emissiveConstant = 0.88
-
-	fx_gasBurst_white = 0.0, 0.0, 0.0, 1.0, 0.0, 0.0, decouple
-	sound_decoupler_fire = decouple
+	bulkheadProfiles = size1, srf
+	CrewCapacity = 0
+	fuelCrossFeed = True
+	PhysicsSignificance = 1
 
 	MODULE
 	{
@@ -71,7 +67,7 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 8
+		maxThrust = 4
 		heatProduction = 10
 		useEngineResponseTime = True
 		engineAccelerationSpeed = 0.12
@@ -140,7 +136,7 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 8
+		maxThrust = 4
 		heatProduction = 10
 		useEngineResponseTime = True
 		engineAccelerationSpeed = 0.12
@@ -221,45 +217,8 @@ PART
 
 	MODULE
 	{
-		name = ModuleAnimateGeneric
-		animationName = Deploy
-		startEventGUIName = Extend Kickstand
-		endEventGUIName = Retract Kiststand
-		actionGUIName = Toggle Kickstand
-	}
-
-	MODULE
-	{
-		name = ModuleKISPartMount
-		mountedPartNode = mount
-		sndStorePath = KIS/Sounds/containerMount
-		allowRelease = true
-		MOUNT
-		{
-			attachNode = back
-			allowedPartName = WBI_JumpChute
-			allowedPartName = WBI_Outback
-			allowedPartName = WBI_JWCargoPallet
-			allowedPartName = WBI_MicroJetEngine
-		}
-
-		MOUNT
-		{
-			attachNode = left
-			allowedPartName = WBI_JWDropTank
-			allowedPartName = WBI_JWCargoPallet
-			allowedPartName = WBI_Outback
-			allowedPartName = WBI_MicroJetEngine
-		}
-
-		MOUNT
-		{
-			attachNode = right
-			allowedPartName = WBI_JWDropTank
-			allowedPartName = WBI_JWCargoPallet
-			allowedPartName = WBI_Outback
-			allowedPartName = WBI_MicroJetEngine
-		}
+		name = ModuleKISItemEvaTweaker
+		allowPartAttach = 1
 	}
 
 	MODULE
@@ -277,138 +236,6 @@ PART
 
 	MODULE
 	{
-		name = KerbalSeat
-		seatPivotName = seatPivot
-		ejectDirection = 0, 1, 0.2
-	}
-
-	MODULE
-	{
-		name = ModuleDecouple
-		ejectionForce = 1
-		explosiveNodeID = srf
-	}
-
-	MODULE
-	{
-		name = FlagDecal
-		textureQuadName = flag
-	}
-
-	MODULE
-	{
-		name = ModuleRCS
-		soundFilePath = Squad/Sounds/sound_rocket_mini
-		thrusterTransformName = rcsThruster
-		thrusterPower = 0.35
-		resourceName = Atmosphere
-		resourceFlowMode = ALL_VESSEL
-		atmosphereCurve
-		{
-			key = 0 1000
-			key = 1 1000
-			key = 4 1000
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleKISItemEvaTweaker
-		volumeOverride = 275
-//		shortcutKeyAction = equip
-		equipable = false	
-//		equipable = true	
-//		equipSlot = jetpack
-//		equipMode = part
-//		usableFromEva = false
-//		usableFromEva = true
-//		usableFromContainer = false
-//		usableFromPod = false
-//		usableFromEditor = false
-//		equipMeshName = jetpack_base01
-//		equipBoneName = bn_jetpack01
-//		equipPos = (0,0,-.04)
-//		equipDir = (0,0,0)
-		allowPartAttach = 1
-	}
-
-	MODULE
-	{
-		name = ModuleCommand
-		minimumCrew = 0
-		RESOURCE
-		{
-			name = ElectricCharge
-			rate = 0.005
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleReactionWheel
-		PitchTorque = 1
-		YawTorque = 2
-		RollTorque = 3
-		RESOURCE
-		{
-			name = ElectricCharge
-			rate = 0.003
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleSAS
-		SASServiceLevel = 1
-	}
-
-	MODULE
-	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 0.2
-		dragAtMaxAoA = 0.1
-		dragAtMinAoA = 0.03
-	}
-
-	MODULE
-	{
-		name = WBIResourceSwitcher
-
-		//Determines if the module allows in-field reconfiguring
-		fieldReconfigurable = True
-
-		//Require a confirmation click before changing resources
-		confirmResourceSwitch = True
-
-		//Determines whether or not to show the context menu GUI
-		showGUI = True
-
-		//name of the template nodes to use
-		templateNodes = JETWING_FUELS
-
-		//Short name of the default module template.
-		//This is used when selecting the part in the editor.
-		//User will then right-click on the module to change its type.
-		defaultTemplate = MonoPropellant
-
-		//Some containers don't hold as much resources as the template specifies, while others hold more.
-		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
-		//factor into the resource amounts.
-		capacityFactor = 1
-
-		resourcesToKeep = ElectricCharge;Atmosphere;IntakeAir
-	}
-
-	MODULE
-	{
-		name = JetWing
-		primaryEngineFuel = MonoPropellant
-		secondaryEngineFuel = Liquid Fuel
-	}
-
-	MODULE
-	{
 		name = WBIMultiEngineHover
 		thrustSmooth = 0.01
 		verticalSpeedIncrements = 1.0
@@ -418,159 +245,6 @@ PART
 		secondaryCheckForOxygen = true
 		ecGenerated = 1.0
 		turbineTransformNames = TurbineFan001;TurbineFan002
-	}
-
-	MODULE
-	{
-		name = ModuleTestSubject
-		useStaging = True
-		useEvent = True
-		situationMask = 15
-		CONSTRAINT
-		{
-			type = OXYGEN
-			value = True
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = LT
-			value = 200
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = GT
-			value = 100
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = LT
-			value = 100
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = GT
-			value = 50
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = LT
-			value = 50
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = SPEEDENV
-			test = GT
-			value = 20
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = SPEED
-			test = LT
-			value = 300
-			situationMask = 8
-		}
-		CONSTRAINT
-		{
-			type = SPEED
-			test = GT
-			value = 50
-			situationMask = 8
-		}
-		CONSTRAINT
-		{
-			type = DENSITY
-			test = GT
-			value = 0.3
-			situationMask = 8
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = DENSITY
-			test = GT
-			value = 0.1
-			situationMask = 8
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = DENSITY
-			test = GT
-			value = 0.05
-			situationMask = 8
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = GT
-			value = 4000
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = LT
-			value = 8000
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = GT
-			value = 1000
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = LT
-			value = 2000
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = GT
-			value = 500
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = ALTITUDEENV
-			test = LT
-			value = 1000
-			prestige = Exceptional
-		}
-		CONSTRAINT
-		{
-			type = REPEATABILITY
-			value = ALWAYS
-			prestige = Trivial
-		}
-		CONSTRAINT
-		{
-			type = REPEATABILITY
-			value = BODYANDSITUATION
-			prestige = Significant
-		}
-		CONSTRAINT
-		{
-			type = REPEATABILITY
-			value = ONCEPERPART
-			prestige = Exceptional
-		}
 	}
 
 	RESOURCE
@@ -592,8 +266,8 @@ PART
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 100
-		maxAmount = 100
+		amount = 10
+		maxAmount = 10
 		isTweakable = false
 		hideFlow = true
 	}
