--- a/GameData/WildBlueIndustries/Buffalo/Parts/Structural/HalfChassis.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Structural/HalfChassis.cfg
@@ -1,12 +1,12 @@
 PART
 {
-name = WBI_ChassisEndu
+name = WBI_HalfChassis
 module = Part
 author = Angel-125
 
 MODEL
 {
-	model = WildBlueIndustries/Buffalo/Assets/ChassisEndu
+	model = WildBlueIndustries/Buffalo/Assets/HalfChassis
 }
 rescaleFactor = 1
 
@@ -14,26 +14,28 @@ node_stack_top = 0, 0.1625, 0, 0, 1, 0, 1
 
 node_stack_bottom = 0, -0.1625, 0, 0, -1, 0, 1
 
+node_stack_back = 0, 0, 0.423, 0, 0, 1, 1
+
 node_stack_front = 0, 0, -0.423, 0, 0, -1, 1
 
-node_stack_left = -0.423, 0, 0, -1, 0, 0, 1
+node_stack_left = -0.212066, 0, 0, -1, 0, 0, 1
 
-node_stack_right = 0.423, 0, 0, 1, 0, 0, 1
+node_stack_right = 0.212066, 0, 0, 1, 0, 0, 1
 
 TechRequired = advConstruction
 entryCost = 2000
-cost = 200
+cost = 300
 category = Structural
 subcategory = 0
-title = Buffalo Chassis (End)
+title = Buffalo Half-Chassis
 manufacturer = Wild Blue Industries
-description = This sturdy chassis is designed to support a variety of components including the Buffalo Command Cab, and wheels. This end unit has no storage capacity but it provides a nice bookend to a chassis.
+description = This sturdy chassis is half the size of a standard chassis. It contains an integrated solar panel and a battery pack, though field upgrades can enable it to hold a variety of different resources.
 
 // attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 attachRules = 1,0,1,1,0
 
 // --- standard part parameters ---
-mass = 0.25
+mass = 0.125
 dragModelType = default
 maximum_drag = 0.2
 minimum_drag = 0.2
@@ -44,22 +46,6 @@ breakingForce = 280
 breakingTorque = 280
 bulkheadProfiles = size1, srf
 CrewCapacity = 0
-
-	MODULE
-	{
-		name = ModuleKISInventory
-		maxVolume = 80
-		externalAccess = true
-		internalAccess = false
-		slotsX = 2
-		slotsY = 2
-		slotSize = 50
-		itemIconResolution = 128
-		selfIconResolution = 128
-		openSndPath = KIS/Sounds/containerOpen
-		closeSndPath = KIS/Sounds/containerClose
-		defaultMoveSndPath = KIS/Sounds/itemMove
-	}
 
 	MODULE
 	{
@@ -85,10 +71,18 @@ CrewCapacity = 0
 		//Some containers don't hold as much resources as the template specifies, while others hold more.
 		//Since the resource templates specify base amounts, the capacity factor specifies a multiplier to
 		//factor into the resource amounts.
-		capacityFactor = 0.0144
+		capacityFactor = 0.009
+	}
 
-		//If the part has a KIS container, this is the base and max amount
-		baseStorage = .001
-		maxStorage = 80
+	MODULE
+	{
+		name = ModuleDeployableSolarPanel
+		sunTracking = false
+		raycastTransformName = sunTracker
+		pivotName = sunTracker
+		isBreakable = false
+		resourceName = ElectricCharge
+		impactResistance = 40
+		chargeRate = 0.7
 	}
 }
