--- a/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A0BearCub.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A0BearCub.cfg
@@ -1,29 +1,27 @@
 PART
 {
-	name = WBI_M1A2Wheel
+	name = WBI_M1A0Wheel
 	module = Part
 	author = Angel-125
 	rescaleFactor = 1
 	MODEL
 	{
-		model = WildBlueIndustries/Buffalo/Assets/Grizzly
+		model = WildBlueIndustries/Buffalo/Assets/BearCub
 	}
 
-	node_attach = 0.7789999, 0.21, 0.00, 1.0, 0.0, 0.0, 1
-	node_stack_front = 0.7789999, 0.21, 0.00, 1.0, 0.0, 0.0, 1
-//	node_attach = -0.075, 0, 0.00, 1.0, 0.0, 0.0, 1
-//	node_stack_front = -0.075, 0, 0.00, 1.0, 0.0, 0.0, 1
+	node_attach = 0.38949995, 0.24, 0.00, 1.0, 0.0, 0.0, 1
+	node_stack_front = 0.38949995, 0.24, 0.00, 1.0, 0.0, 0.0, 1
 
 	TechRequired = fieldScience
 	entryCost = 9200
 	cost = 950
 	category = Utility
 	subcategory = 0
-	title = M1-A2 Grizzly
+	title = M1-A0 Bear Cub
 	manufacturer = Wild Blue Industries
-	description = Building upon their experience with the M1A1 Mountain Goat, Wild Blue Industries created the M1-A2 Grizzly heavy duty wheel. The Grizzly offers a wider wheelbase, lower center of gravity, faster speed and better traction than the Mountain Goat. Unfortunately, rovers built with these wheels will not be able to enter or exit Mk3 cargo bays.
+	description = This adorable wheel is great for small rovers. While not particularly fast, the Bear Cub is rather portable.
 	attachRules = 1,1,0,1,0
-	mass = 0.05
+	mass = 0.005
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.3
@@ -31,8 +29,8 @@ PART
 	crashTolerance = 7
 	maxTemp = 1200 // = 3600
 	crashTolerance = 100
-	breakingForce = 12000
-	breakingTorque = 12000
+	breakingForce = 1200
+	breakingTorque = 1200
 	bulkheadProfiles = srf
 
 	MODULE
@@ -40,7 +38,7 @@ PART
 		name = ModuleWheel
 		hasMotor = true
 		resourceName = ElectricCharge
-		resourceConsumptionRate = 0.7
+		resourceConsumptionRate = 0.4
 		canSteer = true
 		controlAxisType = Forward
 		steeringModeType = AutomaticSteer
@@ -71,13 +69,11 @@ PART
 		//speed | amount of torque at that speed
 		torqueCurve
 		{
-			key = 0 400 0 0
-			key = 1 450 0 0
-			key = 5 425 0 0
-			key = 20 200 0
-			key = 35 100 0 0
-			key = 40 15 0 0
-			key = 45 0 0 0
+			key = 0 200 0 0
+			key = 1 250 0 0
+			key = 5 225 0 0
+			key = 15 100 0
+			key = 17 0 0 0
 		}
 	}
 
@@ -93,26 +89,6 @@ PART
 		{
 			targetName = PistonCenter2
 			rotatorsName = PistonCenter1
-		}
-		CONSTRAINLOOKFX
-		{
-			targetName = PistonLowerLeft1
-			rotatorsName = PistonLowerLeft2
-		}
-		CONSTRAINLOOKFX
-		{
-			targetName = PistonLowerLeft2
-			rotatorsName = PistonLowerLeft1
-		}
-		CONSTRAINLOOKFX
-		{
-			targetName = PistonLowerRight1
-			rotatorsName = PistonLowerRight2
-		}
-		CONSTRAINLOOKFX
-		{
-			targetName = PistonLowerRight2
-			rotatorsName = PistonLowerRight1
 		}
 		CONSTRAINLOOKFX
 		{
@@ -151,7 +127,7 @@ PART
 	MODULE
 	{
 		name = ModuleKISItem
-		volumeOverride = 300
+		volumeOverride = 100
 		stackable = true
 		allowPartAttach = 2
 		allowStaticAttach = 1
@@ -160,7 +136,7 @@ PART
 
 }
 
-@PART[WBI_M1A2Wheel]:NEEDS[WheelSounds]
+@PART[WBI_M1A0Wheel]:NEEDS[WheelSounds]
 {
 	MODULE
 	{
