KSP 1.1 Bug Fixes

--- a/GameData/WildBlueIndustries/000WildBlueTools/CommonTemplates/Production/Rockhound.cfg
+++ b/GameData/WildBlueIndustries/000WildBlueTools/CommonTemplates/Production/Rockhound.cfg
@@ -11,9 +11,9 @@ ROCKHOUND
 	reconfigureSkill = Engineer
 	TechRequired = scienceTech
 	templateTags = orbitalWorkshop
-	logoPanel = WildBlueIndustries/Pathfinder/Decals/Pathfinder
-	glowPanel = WildBlueIndustries/Pathfinder/Decals/PathfinderGlow
-	toolTip = You might want to staff your Geology Labs with scientists to improve your prospecting.
+	logoPanel = WildBlueIndustries/Pathfinder/Decals/Rockhound
+	glowPanel = WildBlueIndustries/Pathfinder/Decals/RockhoundGlow
+	toolTip = Asteroids provide lots of rock.
 	toolTipTitle = Your First Rockhound!
 
 	MODULE
