--- a/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
+++ b/GameData/WildBlueIndustries/Buffalo/Parts/Wheel/M1A1OmniWheel.cfg
@@ -47,7 +47,7 @@ PART
 		FitWheelColliderToMesh = False		
 		radius = 0.32
 		center = 0,0,0
-		mass = 0.5
+		mass = 0.25
 		groundHeightOffset = 0
 				
 		TooltipTitle = Rover Wheel
@@ -84,8 +84,8 @@ PART
 		name = ModuleWheelMotor
 		baseModuleIndex = 0
 		
-		maxRpm = 42
-		driveResponse = 5
+		wheelSpeedMax = 34
+		driveResponse = 10
 		tractionControlScale = 0.0
 	
 		torqueCurve
